chore(): update styles for code samples so that they are smaller in size and fix some md spacing.

--- a/src/components/stencil-site/stencil-site.scss
+++ b/src/components/stencil-site/stencil-site.scss
@@ -105,6 +105,8 @@ pre {
     word-wrap: normal;
     white-space: pre;
     box-sizing: border-box;
+    font-size: 12px;
+    line-height: 20px;
   }
 }
 
